// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package com.google.solutions.satools.perfbenchmark.proto;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message ClientInformation {
  string client_id = 1;
  repeated string scopes = 5;
}

message BenchmarkJob {

  // ReadOnly
  int64 id = 1;

  // ReadOnly
  Principal principal = 2;

  // ReadOnly
  string log_uri = 3;

  // ReadOnly
  int64 max_log_offset = 4;

  // ReadOnly
  // protolint:disable:next REPEATED_FIELD_NAMES_PLURALIZED
  repeated BenchmarkJobRunInformation run_information = 5;

  // ReadOnly
  BenchmarkResult result = 10;

  JobInformation job_information = 15;
}

message JobInformation {
  CloudProviderType cloud_provider = 5;

  string cloud_project_id = 6;

  BenchmarkType type = 10;

  string benchmark_yaml = 11;
}

message Principal {
  string creator_email = 1;
}

message BenchmarkResult {
  repeated BenchmarkMetricResult metrics = 1;
}

message BenchmarkMetricResult {
  .google.protobuf.Timestamp timestamp = 1;
  string metric = 5;
  double value = 10;
  string unit = 11;
  repeated string labels = 15;
}

message BenchmarkJobRunInformation {

  .google.protobuf.Timestamp timestamp = 1;

  BenchmarkJobStatus status = 2;
}

message ListBenchmarkJobs {
  repeated BenchmarkJob jobs = 1;
}


enum BenchmarkJobStatus {
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  // protolint:disable:next ENUM_FIELD_NAMES_ZERO_VALUE_END_WITH
  UNKNOWN_JOB_STATUS = 0;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  CREATED = 1;

  // Build or step is queued; work has not yet begun.
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  QUEUED = 2;

  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  RUNNING = 5;

  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  CANCELLING = 7;

  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  FINISHED = 10;

  // Build or step failed to complete successfully.
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  FAILED = 11;

  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  CANCELLED = 12;

  // Build or step failed due to an internal cause.
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  INTERNAL_ERROR = 15;

  // Build or step took longer than was allowed.
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  TIMEOUT = 16;

  // Build was enqueued for longer than the value of `queue_ttl`.
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  EXPIRED = 17;
}

enum BenchmarkType {
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  // protolint:disable:next ENUM_FIELD_NAMES_ZERO_VALUE_END_WITH
  UNKNOWN_BENCHMARK = 0;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  AEROSPIKE  =  1;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  APACHEBENCH =  2;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  CASSANDRA_STRESS =  3;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  CLUSTER_BOOT =  4;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  COREMARK =  5;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  FIO =  6;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  IPERF =  7;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  KUBERNETES_NGINX =  8;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  KUBERNETES_REDIS_MEMTIER =  9;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  MONGODB_YCSB =  10;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  MULTICHASE =  11;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  NGINX =  12;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  PGBENCH =  13;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  REDIS_MEMTIER =  14;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  SYSBENCH =  15;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  TOMCAT_WRK = 16;
}

enum CloudProviderType {
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  // protolint:disable:next ENUM_FIELD_NAMES_ZERO_VALUE_END_WITH
  UNKNOWN_PROVIDER = 0;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  GOOGLE_CLOUD = 1;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  AMAZON_WEB_SERVICES = 2;
}
